--- a/src/exploratory_data_analysis.ipynb
+++ b/src/exploratory_data_analysis.ipynb
@@ -16,19 +16,17 @@
    "cell_type": "code",
    "id": "252817d0-94ec-4a60-8662-f279dec58496",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-29T17:03:34.144502Z",
-     "start_time": "2024-09-29T17:03:34.131009Z"
+    "jupyter": {
+     "is_executing": true
     }
    },
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 50
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -47,7 +45,8 @@
     "* gender counts (total, survived x no survive);\n",
     "* sibsp and parch distribution (total, survived x no survive);\n",
     "* embarked counts (total, survived x no survive).\n",
-    "* So, test relationships - after EDA"
+    "* So, test relationships - after EDA\n",
+    "* DO AGAIN -> Code below"
    ],
    "id": "b6b11ed14f12a2b6"
   },
@@ -408,6 +407,7 @@
    },
    "cell_type": "code",
    "source": [
+    "#Using log2 to better visualization\n",
     "sns.boxplot(data=train_data['Fare'], log_scale=2)\n",
     "plt.title('Distribution of Fare - Log2')\n",
     "plt.xlabel('Fare')\n",
@@ -440,12 +440,11 @@
     "survived = train_data['Survived']\n",
     "survived.replace({1: 'Yes', 0: 'No'}, inplace=True)\n",
     "survived_count = survived.value_counts()\n",
-    "print(survived_count)\n",
     "survived_count.plot(kind='bar')\n",
     "plt.title('Survived count')\n",
     "plt.xlabel('Survived')\n",
     "plt.ylabel('Count')\n",
-    "plt.show()\n"
+    "plt.show()"
    ],
    "id": "b8b1c42401fec55a",
    "outputs": [
@@ -482,7 +481,6 @@
    "cell_type": "code",
    "source": [
     "gender_count = train_data['Sex'].value_counts()\n",
-    "print(gender_count)\n",
     "gender_count.replace({'male': 'Male', 'female': 'Female'}, inplace=True)\n",
     "gender_count.plot(kind='bar')\n",
     "plt.title('Gender count')\n",
@@ -514,158 +512,6 @@
     }
    ],
    "execution_count": 57
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "## Test data",
-   "id": "982890e4063a46be"
-  },
-  {
-   "cell_type": "code",
-   "id": "1e72181e-a187-4671-a3dd-5e310c7466dd",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-29T17:03:35.659599Z",
-     "start_time": "2024-09-29T17:03:35.638387Z"
-    }
-   },
-   "source": [
-    "test_data = pd.read_csv('../datasets/test.csv')\n",
-    "test_data.head()"
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "   PassengerId  Pclass                                          Name     Sex  \\\n",
-       "0          892       3                              Kelly, Mr. James    male   \n",
-       "1          893       3              Wilkes, Mrs. James (Ellen Needs)  female   \n",
-       "2          894       2                     Myles, Mr. Thomas Francis    male   \n",
-       "3          895       3                              Wirz, Mr. Albert    male   \n",
-       "4          896       3  Hirvonen, Mrs. Alexander (Helga E Lindqvist)  female   \n",
-       "\n",
-       "    Age  SibSp  Parch   Ticket     Fare Cabin Embarked  \n",
-       "0  34.5      0      0   330911   7.8292   NaN        Q  \n",
-       "1  47.0      1      0   363272   7.0000   NaN        S  \n",
-       "2  62.0      0      0   240276   9.6875   NaN        Q  \n",
-       "3  27.0      0      0   315154   8.6625   NaN        S  \n",
-       "4  22.0      1      1  3101298  12.2875   NaN        S  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Cabin</th>\n",
-       "      <th>Embarked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>892</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Kelly, Mr. James</td>\n",
-       "      <td>male</td>\n",
-       "      <td>34.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>330911</td>\n",
-       "      <td>7.8292</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Q</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>893</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Wilkes, Mrs. James (Ellen Needs)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>363272</td>\n",
-       "      <td>7.0000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>894</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Myles, Mr. Thomas Francis</td>\n",
-       "      <td>male</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>240276</td>\n",
-       "      <td>9.6875</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Q</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>895</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Wirz, Mr. Albert</td>\n",
-       "      <td>male</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>315154</td>\n",
-       "      <td>8.6625</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>896</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Hirvonen, Mrs. Alexander (Helga E Lindqvist)</td>\n",
-       "      <td>female</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3101298</td>\n",
-       "      <td>12.2875</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 58
   }
  ],
  "metadata": {
