--- a/src/exploratory_data_analysis.ipynb
+++ b/src/exploratory_data_analysis.ipynb
@@ -38,15 +38,11 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### TODO To analyze: \n",
-    "* age distribution (total, survived x no survive);\n",
-    "* fare distribution (total, survived x no survive); \n",
-    "* pclass counts (total, survived x no survive); \n",
-    "* gender counts (total, survived x no survive);\n",
-    "* sibsp and parch distribution (total, survived x no survive);\n",
-    "* embarked counts (total, survived x no survive).\n",
-    "* So, test relationships - after EDA\n",
-    "* DO AGAIN -> Code below"
+    "### TODO \n",
+    "* Divide/transform data -> survived/not survived;\n",
+    "* Anlyze each variable for survivers/not -> values, estimates and distributions; \n",
+    "* Test relationships and hypotesis\n",
+    "* Train a model based on EDA, relationships and hypotesis"
    ],
    "id": "b6b11ed14f12a2b6"
   },
