--- a/src/exploratory_data_analysis.ipynb
+++ b/src/exploratory_data_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "252817d0-94ec-4a60-8662-f279dec58496",
    "metadata": {
     "jupyter": {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8fe0ba9b-e387-49a2-94d0-7ebc28b18d64",
    "metadata": {
     "ExecuteTime": {
@@ -201,7 +201,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "cf7afa11a70a3dd",
    "metadata": {
     "ExecuteTime": {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "09e46d4f-9053-4c97-ae80-7a41997812e9",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5c503a1f-7342-4e0b-aaf5-76e6c9f14d09",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
        "4      0            373450   8.0500   NaN        S          No  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "b133104d-2141-4139-8e6e-a20511129a62",
    "metadata": {},
    "outputs": [
@@ -602,18 +602,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "b2d26cca-147c-44c2-b555-39cc10422878",
    "metadata": {},
    "outputs": [],
    "source": [
     "survived = train_data.query('Survived==1')\n",
-    "not_survived = train_data.query('Survived==0')"
+    "not_survived = train_data.query('Survived==0')\n",
+    "num_data = ['Pclass', 'Age', 'SibSp', 'Parch', 'Fare']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "ab4fc563-0f0a-43fb-a9bb-e6d67d25d410",
    "metadata": {},
    "outputs": [
@@ -638,8 +639,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
        "      <th>Pclass</th>\n",
        "      <th>Age</th>\n",
        "      <th>SibSp</th>\n",
@@ -651,8 +650,6 @@
        "    <tr>\n",
        "      <th>count</th>\n",
        "      <td>342.000000</td>\n",
-       "      <td>342.0</td>\n",
-       "      <td>342.000000</td>\n",
        "      <td>290.000000</td>\n",
        "      <td>342.000000</td>\n",
        "      <td>342.000000</td>\n",
@@ -660,8 +657,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>444.368421</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>1.950292</td>\n",
        "      <td>28.343690</td>\n",
        "      <td>0.473684</td>\n",
@@ -670,8 +665,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>252.358840</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.863321</td>\n",
        "      <td>14.950952</td>\n",
        "      <td>0.708688</td>\n",
@@ -680,8 +673,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.420000</td>\n",
        "      <td>0.000000</td>\n",
@@ -690,8 +681,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>250.750000</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>19.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -700,8 +689,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>439.500000</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>28.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -710,8 +697,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>651.500000</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>36.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -720,8 +705,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>890.000000</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>80.000000</td>\n",
        "      <td>4.000000</td>\n",
@@ -733,39 +716,29 @@
        "</div>"
       ],
       "text/plain": [
-       "       PassengerId  Survived      Pclass         Age       SibSp       Parch  \\\n",
-       "count   342.000000     342.0  342.000000  290.000000  342.000000  342.000000   \n",
-       "mean    444.368421       1.0    1.950292   28.343690    0.473684    0.464912   \n",
-       "std     252.358840       0.0    0.863321   14.950952    0.708688    0.771712   \n",
-       "min       2.000000       1.0    1.000000    0.420000    0.000000    0.000000   \n",
-       "25%     250.750000       1.0    1.000000   19.000000    0.000000    0.000000   \n",
-       "50%     439.500000       1.0    2.000000   28.000000    0.000000    0.000000   \n",
-       "75%     651.500000       1.0    3.000000   36.000000    1.000000    1.000000   \n",
-       "max     890.000000       1.0    3.000000   80.000000    4.000000    5.000000   \n",
-       "\n",
-       "             Fare  \n",
-       "count  342.000000  \n",
-       "mean    48.395408  \n",
-       "std     66.596998  \n",
-       "min      0.000000  \n",
-       "25%     12.475000  \n",
-       "50%     26.000000  \n",
-       "75%     57.000000  \n",
-       "max    512.329200  "
+       "           Pclass         Age       SibSp       Parch        Fare\n",
+       "count  342.000000  290.000000  342.000000  342.000000  342.000000\n",
+       "mean     1.950292   28.343690    0.473684    0.464912   48.395408\n",
+       "std      0.863321   14.950952    0.708688    0.771712   66.596998\n",
+       "min      1.000000    0.420000    0.000000    0.000000    0.000000\n",
+       "25%      1.000000   19.000000    0.000000    0.000000   12.475000\n",
+       "50%      2.000000   28.000000    0.000000    0.000000   26.000000\n",
+       "75%      3.000000   36.000000    1.000000    1.000000   57.000000\n",
+       "max      3.000000   80.000000    4.000000    5.000000  512.329200"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "survived.describe()"
+    "survived[num_data].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "417b7bda-f42f-4db1-a257-5b4d5bc5b37d",
    "metadata": {},
    "outputs": [
@@ -790,8 +763,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
        "      <th>Pclass</th>\n",
        "      <th>Age</th>\n",
        "      <th>SibSp</th>\n",
@@ -803,8 +774,6 @@
        "    <tr>\n",
        "      <th>count</th>\n",
        "      <td>549.000000</td>\n",
-       "      <td>549.0</td>\n",
-       "      <td>549.000000</td>\n",
        "      <td>424.000000</td>\n",
        "      <td>549.000000</td>\n",
        "      <td>549.000000</td>\n",
@@ -812,8 +781,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>447.016393</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>2.531876</td>\n",
        "      <td>30.626179</td>\n",
        "      <td>0.553734</td>\n",
@@ -822,8 +789,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>260.640469</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.735805</td>\n",
        "      <td>14.172110</td>\n",
        "      <td>1.288399</td>\n",
@@ -833,8 +798,6 @@
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -842,8 +805,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>211.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>21.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -852,8 +813,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>455.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>28.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -862,8 +821,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>675.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>39.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -872,8 +829,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>891.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>74.000000</td>\n",
        "      <td>8.000000</td>\n",
@@ -885,34 +840,24 @@
        "</div>"
       ],
       "text/plain": [
-       "       PassengerId  Survived      Pclass         Age       SibSp       Parch  \\\n",
-       "count   549.000000     549.0  549.000000  424.000000  549.000000  549.000000   \n",
-       "mean    447.016393       0.0    2.531876   30.626179    0.553734    0.329690   \n",
-       "std     260.640469       0.0    0.735805   14.172110    1.288399    0.823166   \n",
-       "min       1.000000       0.0    1.000000    1.000000    0.000000    0.000000   \n",
-       "25%     211.000000       0.0    2.000000   21.000000    0.000000    0.000000   \n",
-       "50%     455.000000       0.0    3.000000   28.000000    0.000000    0.000000   \n",
-       "75%     675.000000       0.0    3.000000   39.000000    1.000000    0.000000   \n",
-       "max     891.000000       0.0    3.000000   74.000000    8.000000    6.000000   \n",
-       "\n",
-       "             Fare  \n",
-       "count  549.000000  \n",
-       "mean    22.117887  \n",
-       "std     31.388207  \n",
-       "min      0.000000  \n",
-       "25%      7.854200  \n",
-       "50%     10.500000  \n",
-       "75%     26.000000  \n",
-       "max    263.000000  "
+       "           Pclass         Age       SibSp       Parch        Fare\n",
+       "count  549.000000  424.000000  549.000000  549.000000  549.000000\n",
+       "mean     2.531876   30.626179    0.553734    0.329690   22.117887\n",
+       "std      0.735805   14.172110    1.288399    0.823166   31.388207\n",
+       "min      1.000000    1.000000    0.000000    0.000000    0.000000\n",
+       "25%      2.000000   21.000000    0.000000    0.000000    7.854200\n",
+       "50%      3.000000   28.000000    0.000000    0.000000   10.500000\n",
+       "75%      3.000000   39.000000    1.000000    0.000000   26.000000\n",
+       "max      3.000000   74.000000    8.000000    6.000000  263.000000"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "not_survived.describe()"
+    "not_survived[num_data].describe()"
    ]
   },
   {
