--- a/src/exploratory_data_analysis.ipynb
+++ b/src/exploratory_data_analysis.ipynb
@@ -49,9 +49,10 @@
    "metadata": {},
    "source": [
     "### TODO \n",
-    "* Divide/transform data -> survived/not survived;\n",
-    "* Anlyze each variable for survivers/not -> values, estimates and distributions; \n",
-    "* Test relationships and hypotesis\n",
+    "* Divide/transform data -> survived/not survived - OK;\n",
+    "* Anlyze each variable for survivers/not -> values, estimates and distributions - OK; \n",
+    "* Change boxplot of Tickets to barplot -> Survivors/Not survivors; \n",
+    "* Test relationships and hypotesis for fare and tickets x survived\n",
     "* Train a model based on EDA, relationships and hypotesis"
    ]
   },
