--- a/src/exploratory_data_analysis.ipynb
+++ b/src/exploratory_data_analysis.ipynb
@@ -52,7 +52,7 @@
     "* Divide/transform data -> survived/not survived - OK;\n",
     "* Anlyze each variable for survivers/not -> values, estimates and distributions - OK; \n",
     "* Change boxplot of Tickets to histplot -> Survivors/Not survivors - OK; \n",
-    "* Analyze the data by gender\n"
+    "* Analyze the data by gender\n",
     "* Add robust estimastes of location and missing estimates of variability\n",
     "* Explore more the data distribution\n",
     "* Test relationships and hypotesis for fare and tickets x survived\n",
