--- a/src/exploratory_data_analysis.ipynb
+++ b/src/exploratory_data_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "id": "252817d0-94ec-4a60-8662-f279dec58496",
    "metadata": {
     "jupyter": {
@@ -33,7 +33,8 @@
     "import math\n",
     "import numpy as np\n",
     "import scipy.stats as stats\n",
-    "from sklearn.ensemble import RandomForestClassifier"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from scipy.stats import chi2_contingency"
    ]
   },
   {
@@ -41,21 +42,7 @@
    "id": "e3dac5a2470d2051",
    "metadata": {},
    "source": [
-    "## Train data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6b11ed14f12a2b6",
-   "metadata": {},
-   "source": [
-    "### TODO \n",
-    "* Divide/transform data -> survived/not survived - OK;\n",
-    "* Anlyze each variable for survivers/not -> values, estimates and distributions - OK; \n",
-    "* Change boxplot of Tickets to histplot -> Survivors/Not survivors - OK; \n",
-    "* Analyze the categorical data (counts) - Pclass and Gender - OK;\n",
-    "* Test relationships and hypotesis for Fare, Pclass and Sex -> survived/not;\n",
-    "* Train a model based on EDA, relationships and hypotesis."
+    "## EDA"
    ]
   },
   {
@@ -1210,12 +1197,51 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a703422-7a99-45a0-b33b-6a54f2657cce",
+   "cell_type": "markdown",
+   "id": "4f0ea8cf-95ce-4206-99be-70457f086642",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Hypotesis testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef4e882d-d801-4efa-a0f3-b9224d95b465",
+   "metadata": {},
+   "source": [
+    "### Woman survived more\n",
+    "H0 -> The proportion of female survivors is the same as of men.<br>\n",
+    "H1 -> The proportion of female survivors is greater than that of men."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "37d916fb-9871-43eb-b2e6-12a1b4d60633",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi2: 260.72\n",
+      "p-value: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "contingency_table = pd.crosstab(train_data['Sex'], train_data['Survived'])\n",
+    "chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "print(f'Chi2: {round(chi2,2)}\\np-value: {round(p,2)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2eeca66a-226e-4ac3-9b97-7fcb8bafe0dc",
+   "metadata": {},
+   "source": [
+    "Rejected H0"
+   ]
   }
  ],
  "metadata": {
