udpate -> finish hypotesis testing

--- a/src/exploratory_data_analysis.ipynb
+++ b/src/exploratory_data_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "252817d0-94ec-4a60-8662-f279dec58496",
    "metadata": {
     "jupyter": {
@@ -34,7 +34,7 @@
     "import numpy as np\n",
     "import scipy.stats as stats\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from scipy.stats import chi2_contingency"
+    "from scipy.stats import chi2_contingency, ttest_ind, mannwhitneyu"
    ]
   },
   {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "8fe0ba9b-e387-49a2-94d0-7ebc28b18d64",
    "metadata": {
     "ExecuteTime": {
@@ -194,13 +194,14 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "train_data = pd.read_csv('../datasets/train.csv')\n",
+    "num_data = ['Pclass', 'Age', 'SibSp', 'Parch', 'Fare']\n",
     "train_data.head()"
    ]
   },
@@ -247,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "09e46d4f-9053-4c97-ae80-7a41997812e9",
    "metadata": {},
    "outputs": [
@@ -272,8 +273,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
        "      <th>Pclass</th>\n",
        "      <th>Age</th>\n",
        "      <th>SibSp</th>\n",
@@ -285,8 +284,6 @@
        "    <tr>\n",
        "      <th>count</th>\n",
        "      <td>891.000000</td>\n",
-       "      <td>891.000000</td>\n",
-       "      <td>891.000000</td>\n",
        "      <td>714.000000</td>\n",
        "      <td>891.000000</td>\n",
        "      <td>891.000000</td>\n",
@@ -294,8 +291,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>446.000000</td>\n",
-       "      <td>0.383838</td>\n",
        "      <td>2.308642</td>\n",
        "      <td>29.699118</td>\n",
        "      <td>0.523008</td>\n",
@@ -304,8 +299,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>257.353842</td>\n",
-       "      <td>0.486592</td>\n",
        "      <td>0.836071</td>\n",
        "      <td>14.526497</td>\n",
        "      <td>1.102743</td>\n",
@@ -315,8 +308,6 @@
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>0.420000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -324,8 +315,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>223.500000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>20.125000</td>\n",
        "      <td>0.000000</td>\n",
@@ -334,8 +323,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>446.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>28.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -344,8 +331,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>668.500000</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>38.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -354,8 +339,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>891.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>3.000000</td>\n",
        "      <td>80.000000</td>\n",
        "      <td>8.000000</td>\n",
@@ -367,34 +350,24 @@
        "</div>"
       ],
       "text/plain": [
-       "       PassengerId    Survived      Pclass         Age       SibSp  \\\n",
-       "count   891.000000  891.000000  891.000000  714.000000  891.000000   \n",
-       "mean    446.000000    0.383838    2.308642   29.699118    0.523008   \n",
-       "std     257.353842    0.486592    0.836071   14.526497    1.102743   \n",
-       "min       1.000000    0.000000    1.000000    0.420000    0.000000   \n",
-       "25%     223.500000    0.000000    2.000000   20.125000    0.000000   \n",
-       "50%     446.000000    0.000000    3.000000   28.000000    0.000000   \n",
-       "75%     668.500000    1.000000    3.000000   38.000000    1.000000   \n",
-       "max     891.000000    1.000000    3.000000   80.000000    8.000000   \n",
-       "\n",
-       "            Parch        Fare  \n",
-       "count  891.000000  891.000000  \n",
-       "mean     0.381594   32.204208  \n",
-       "std      0.806057   49.693429  \n",
-       "min      0.000000    0.000000  \n",
-       "25%      0.000000    7.910400  \n",
-       "50%      0.000000   14.454200  \n",
-       "75%      0.000000   31.000000  \n",
-       "max      6.000000  512.329200  "
+       "           Pclass         Age       SibSp       Parch        Fare\n",
+       "count  891.000000  714.000000  891.000000  891.000000  891.000000\n",
+       "mean     2.308642   29.699118    0.523008    0.381594   32.204208\n",
+       "std      0.836071   14.526497    1.102743    0.806057   49.693429\n",
+       "min      1.000000    0.420000    0.000000    0.000000    0.000000\n",
+       "25%      2.000000   20.125000    0.000000    0.000000    7.910400\n",
+       "50%      3.000000   28.000000    0.000000    0.000000   14.454200\n",
+       "75%      3.000000   38.000000    1.000000    0.000000   31.000000\n",
+       "max      3.000000   80.000000    8.000000    6.000000  512.329200"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_data.describe()"
+    "train_data[num_data].describe()"
    ]
   },
   {
@@ -601,8 +574,7 @@
    "outputs": [],
    "source": [
     "survived = train_data.query('Survived==1')\n",
-    "not_survived = train_data.query('Survived==0')\n",
-    "num_data = ['Pclass', 'Age', 'SibSp', 'Parch', 'Fare']"
+    "not_survived = train_data.query('Survived==0')"
    ]
   },
   {
@@ -873,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "aec3f215-9c7c-4f67-ac40-3678164ac4cf",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "07a3d2e5-775d-40c3-9402-99753472797a",
    "metadata": {},
    "outputs": [
@@ -1216,7 +1188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
+   "id": "96090d7d-6d9f-4d49-9b63-c06fd3da6627",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contingency_table_sex = pd.crosstab(train_data['Sex'], train_data['Survived'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "37d916fb-9871-43eb-b2e6-12a1b4d60633",
    "metadata": {},
    "outputs": [
@@ -1230,8 +1212,7 @@
     }
    ],
    "source": [
-    "contingency_table = pd.crosstab(train_data['Sex'], train_data['Survived'])\n",
-    "chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "chi2, p, dof, expected = chi2_contingency(contingency_table_sex)\n",
     "print(f'Chi2: {round(chi2,2)}\\np-value: {round(p,2)}')"
    ]
   },
@@ -1240,8 +1221,122 @@
    "id": "2eeca66a-226e-4ac3-9b97-7fcb8bafe0dc",
    "metadata": {},
    "source": [
-    "Rejected H0"
+    "**Rejected H0**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "554d91a1-3b58-49b0-82e9-88a29707b93c",
+   "metadata": {},
+   "source": [
+    "### Passengers with higher Fare survived more"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df183734-f1a9-49c7-bde8-2a26484cb64a",
+   "metadata": {},
+   "source": [
+    "H0 -> The average Fare for survivors is the same as that non-survivors<br>\n",
+    "H1 -> The average Fare for survivors is higher than that for non-survivors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "fa7d2df3-a477-4fb9-97b4-52b425d76826",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "survived_fare = survived['Fare']\n",
+    "not_survived_fare = not_survived['Fare']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "f98c389e-6e17-4467-a602-077b94f8eab3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-value: 7.94\n",
+      "p-value: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "t_stat, p_value = ttest_ind(\n",
+    "    survived_fare, not_survived_fare, nan_policy='omit'\n",
+    ")\n",
+    "print(f't-value: {round(t_stat,2)}\\np-value: {round(p_value,2)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23f885b6-6980-4592-9771-71232d87f4d4",
+   "metadata": {},
+   "source": [
+    "**Rejected H0**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b692919e-d9e8-4b31-a164-728085d30479",
+   "metadata": {},
+   "source": [
+    "### Passengers in Pclass 1 survived more"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e709c43f-90bd-4d83-ac09-f2e063304495",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contingency_table_pclass = pd.crosstab(\n",
+    "    train_data['Pclass'], train_data['Survived']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "1c34ecf7-705e-4b5c-8ada-e7013ce0a3d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chi-2: 102.89\n",
+      "p-value: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "chi2_pclass, p_value, dof_pclass, expected_pclass = chi2_contingency(\n",
+    "    contingency_table_pclass\n",
+    ")\n",
+    "print(f'chi-2: {round(chi2_pclass,2)}\\np-value: {round(p_value,2)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fda0d83-1788-47b9-9d9e-06b0aa62702f",
+   "metadata": {},
+   "source": [
+    "**Rejected H0**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93e5c26b-7769-42d0-8152-f4387effb59a",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
