update -> warnings and output

--- a/src/exploratory_data_analysis.ipynb
+++ b/src/exploratory_data_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "252817d0-94ec-4a60-8662-f279dec58496",
    "metadata": {
     "jupyter": {
@@ -34,7 +34,18 @@
     "import numpy as np\n",
     "import scipy.stats as stats\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from scipy.stats import chi2_contingency, ttest_ind, mannwhitneyu"
+    "from scipy.stats import chi2_contingency, ttest_ind, mannwhitneyu\n",
+    "import warnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b32a2847-f4bd-481b-8278-095bdbb48bdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
@@ -47,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "8fe0ba9b-e387-49a2-94d0-7ebc28b18d64",
    "metadata": {
     "ExecuteTime": {
@@ -194,7 +205,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "cf7afa11a70a3dd",
    "metadata": {
     "ExecuteTime": {
@@ -248,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "09e46d4f-9053-4c97-ae80-7a41997812e9",
    "metadata": {},
    "outputs": [
@@ -361,7 +372,7 @@
        "max      3.000000   80.000000    8.000000    6.000000  512.329200"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "5c503a1f-7342-4e0b-aaf5-76e6c9f14d09",
    "metadata": {},
    "outputs": [
@@ -520,7 +531,7 @@
        "4      0            373450   8.0500   NaN        S          No  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "b133104d-2141-4139-8e6e-a20511129a62",
    "metadata": {},
    "outputs": [
@@ -568,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "b2d26cca-147c-44c2-b555-39cc10422878",
    "metadata": {},
    "outputs": [],
@@ -579,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "ab4fc563-0f0a-43fb-a9bb-e6d67d25d410",
    "metadata": {},
    "outputs": [
@@ -692,7 +703,7 @@
        "max      3.000000   80.000000    4.000000    5.000000  512.329200"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "417b7bda-f42f-4db1-a257-5b4d5bc5b37d",
    "metadata": {},
    "outputs": [
@@ -816,7 +827,7 @@
        "max      3.000000   74.000000    8.000000    6.000000  263.000000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "aec3f215-9c7c-4f67-ac40-3678164ac4cf",
    "metadata": {},
    "outputs": [
@@ -879,18 +890,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "50969400-65a0-4bce-a8c7-51b0f16c196f",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Giordano\\anaconda3\\envs\\titanic-machine-learning-env\\Lib\\site-packages\\pandas\\core\\arraylike.py:399: RuntimeWarning: divide by zero encountered in log2\n",
-      "  result = getattr(ufunc, method)(*inputs, **kwargs)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1041,7 +1044,7 @@
        "4      0            373450   8.0500   NaN        S          No  3.008989  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "67ee8e10-fcaf-4dd4-abc5-40c8dc2512f2",
    "metadata": {},
    "outputs": [
@@ -1079,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "9b32002a-e16a-4465-8433-07786deca4bb",
    "metadata": {},
    "outputs": [
@@ -1092,7 +1095,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "ad260a28-be32-4c60-b805-dcff525c48d5",
    "metadata": {},
    "outputs": [
@@ -1116,7 +1119,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "07a3d2e5-775d-40c3-9402-99753472797a",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "96090d7d-6d9f-4d49-9b63-c06fd3da6627",
    "metadata": {},
    "outputs": [],
@@ -1198,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "37d916fb-9871-43eb-b2e6-12a1b4d60633",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "fa7d2df3-a477-4fb9-97b4-52b425d76826",
    "metadata": {},
    "outputs": [],
@@ -1254,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "f98c389e-6e17-4467-a602-077b94f8eab3",
    "metadata": {},
    "outputs": [
@@ -1292,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "e709c43f-90bd-4d83-ac09-f2e063304495",
    "metadata": {},
    "outputs": [],
@@ -1304,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "1c34ecf7-705e-4b5c-8ada-e7013ce0a3d2",
    "metadata": {},
    "outputs": [
@@ -1342,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "id": "a4084fd6-305a-496a-b081-ef136e818984",
    "metadata": {},
    "outputs": [],
@@ -1352,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "id": "36010904-02de-49d3-b39c-c488fc78f6dd",
    "metadata": {},
    "outputs": [],
@@ -1365,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "id": "036d3fad-557a-4ab3-b87e-870bae3c9791",
    "metadata": {},
    "outputs": [
@@ -1782,7 +1785,7 @@
        "RandomForestClassifier(max_depth=5, random_state=1)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1796,48 +1799,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "id": "f7b74121-b179-410b-9437-2253fe543d35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1, 1, 0, 0,\n",
-       "       1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
-       "       1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1,\n",
-       "       1, 0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0,\n",
-       "       1, 0, 1, 0, 1, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "       0, 1, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1,\n",
-       "       0, 0, 1, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1,\n",
-       "       1, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
-       "       0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 0, 1, 0,\n",
-       "       1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1,\n",
-       "       0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 1,\n",
-       "       0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0,\n",
-       "       0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0,\n",
-       "       0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0,\n",
-       "       1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 1, 1, 0,\n",
-       "       0, 0, 1, 0, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 0, 0,\n",
-       "       1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1,\n",
-       "       0, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 1, 0, 0, 0],\n",
-       "      dtype=int64)"
+       "array([0, 1, 0, 0, 1], dtype=int64)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "predictions = model.predict(X_test)\n",
-    "predictions"
+    "predictions[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "id": "e519626e-145d-4bd7-9dba-42278c026c26",
    "metadata": {},
    "outputs": [
@@ -1905,7 +1889,7 @@
        "4          896         1"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1922,21 +1906,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "id": "7e84a1c8-a8fa-4321-bc22-1a7840f33391",
    "metadata": {},
    "outputs": [],
    "source": [
     "output.to_csv('submission.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b9a5e18-a87c-4818-b9e2-c3e49b44a712",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
