--- a/src/exploratory_data_analysis.ipynb
+++ b/src/exploratory_data_analysis.ipynb
@@ -1913,6 +1913,14 @@
    "source": [
     "output.to_csv('submission.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01b1e0ab-58d6-48cb-99fb-c1162af99d94",
+   "metadata": {},
+   "source": [
+    "**Score: 0.77751**"
+   ]
   }
  ],
  "metadata": {
